fix terminal x overflow

--- a/website/components/terminal.module.css
+++ b/website/components/terminal.module.css
@@ -138,7 +138,6 @@
 
 .typer {
   word-break: break-all;
-  white-space: pre;
 }
 
 /*********** PARTS OF THE SCREEN *************/
